--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"eslint-plugin-prettier": "3.1.2",
 		"eslint-plugin-react": "7.19.0",
 		"eslint-plugin-react-hooks": "2.5.1",
+		"husky": "4.2.5",
 		"lint-staged": "10.1.3",
 		"npm-run-all": "4.1.5",
 		"prettier": "2.0.4",
