--- a/package.json
+++ b/package.json
@@ -36,16 +36,19 @@
 		"commit": "git-cz"
 	},
 	"dependencies": {
+		"classnames": "2.2.6",
 		"next": "9.3.4",
 		"preact": "10.4.0",
 		"preact-render-to-string": "5.1.6",
 		"preact-ssr-prepass": "1.0.1",
+		"prop-types": "15.7.2",
 		"react": "16.13.1",
 		"react-dom": "16.13.1"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "8.3.5",
 		"@commitlint/config-conventional": "8.3.4",
+		"@types/classnames": "2.2.10",
 		"@types/node": "13.11.1",
 		"@types/react": "16.9.34",
 		"@typescript-eslint/eslint-plugin": "2.27.0",
