--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
 		"lint:types": "tsc",
 		"lint:scripts": "eslint './**/*.tsx' './**/*.ts' './**/*.js'",
 		"lint:css": "stylelint './**/*.css' './**/*.scss'",
+		"storybook": "start-storybook -s ./public -p 6006",
+		"storybook:build": "build-storybook -s ./public",
 		"commit": "git-cz"
 	},
 	"dependencies": {
@@ -46,14 +48,27 @@
 		"react-dom": "16.13.1"
 	},
 	"devDependencies": {
+		"@babel/core": "7.9.0",
 		"@commitlint/cli": "8.3.5",
 		"@commitlint/config-conventional": "8.3.4",
+		"@storybook/addon-actions": "5.3.18",
+		"@storybook/addon-backgrounds": "5.3.18",
+		"@storybook/addon-console": "1.2.1",
+		"@storybook/addon-knobs": "5.3.18",
+		"@storybook/addon-links": "5.3.18",
+		"@storybook/addon-storysource": "5.3.18",
+		"@storybook/addon-viewport": "5.3.18",
+		"@storybook/addons": "5.3.18",
+		"@storybook/react": "5.3.18",
+		"@storybook/source-loader": "5.3.18",
 		"@types/classnames": "2.2.10",
 		"@types/node": "13.11.1",
 		"@types/react": "16.9.34",
 		"@typescript-eslint/eslint-plugin": "2.27.0",
 		"@typescript-eslint/parser": "2.27.0",
 		"babel-eslint": "10.1.0",
+		"babel-loader": "8.1.0",
+		"babel-preset-react-app": "9.1.2",
 		"commitizen": "4.0.4",
 		"cz-conventional-changelog": "3.1.0",
 		"dotenv": "8.2.0",
@@ -71,14 +86,17 @@
 		"lint-staged": "10.1.3",
 		"npm-run-all": "4.1.5",
 		"prettier": "2.0.4",
+		"regenerator-runtime": "0.13.5",
 		"sass": "1.26.3",
+		"sass-loader": "8.0.2",
 		"semantic-release": "17.0.4",
 		"stylelint": "13.3.1",
 		"stylelint-config-prettier": "8.0.1",
 		"stylelint-config-recess-order": "2.0.4",
 		"stylelint-config-standard": "20.0.0",
 		"stylelint-prettier": "1.1.2",
-		"typescript": "3.8.3"
+		"typescript": "3.8.3",
+		"webpack-notifier": "1.8.0"
 	},
 	"config": {
 		"commitizen": {
