--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"@types/react": "16.9.34",
 		"@typescript-eslint/eslint-plugin": "2.27.0",
 		"@typescript-eslint/parser": "2.27.0",
+		"all-contributors-cli": "6.14.1",
 		"babel-eslint": "10.1.0",
 		"babel-loader": "8.1.0",
 		"babel-preset-react-app": "9.1.2",
