--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -9,6 +9,20 @@
   "imageSize": 100,
   "commit": true,
   "commitConvention": "angular",
-  "contributors": [],
+  "contributors": [
+    {
+      "login": "ruisaraiva19",
+      "name": "Rui Saraiva",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/7356098?v=4",
+      "profile": "https://ruisaraiva.com",
+      "contributions": [
+        "infra",
+        "code",
+        "doc",
+        "question",
+        "maintenance"
+      ]
+    }
+  ],
   "contributorsPerLine": 7
 }
