--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,16 @@
         "question",
         "maintenance"
       ]
+    },
+    {
+      "login": "eduardoPinto12",
+      "name": "Eduardo Pinto",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/45365656?v=4",
+      "profile": "https://github.com/eduardoPinto12",
+      "contributions": [
+        "code",
+        "review"
+      ]
     }
   ],
   "contributorsPerLine": 7
