docs: add @otsugua as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -32,6 +32,15 @@
         "code",
         "review"
       ]
+    },
+    {
+      "login": "otsugua",
+      "name": "Augusto Lopes",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/9093629?v=4",
+      "profile": "https://github.com/otsugua",
+      "contributions": [
+        "design"
+      ]
     }
   ],
   "contributorsPerLine": 7
