--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
 		"preact-ssr-prepass": "1.0.1",
 		"prop-types": "15.7.2",
 		"react": "16.13.1",
-		"react-dom": "16.13.1"
+		"react-dom": "16.13.1",
+		"use-dark-mode": "2.3.1"
 	},
 	"devDependencies": {
 		"@babel/core": "7.9.0",
