feat(resize): add resize serverless function
Added API route serverless function to resize the favicon

fix #6

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,9 @@
 		"react/jsx-filename-extension": [1, { "extensions": [".js", ".ts", "tsx"] }],
 		"@typescript-eslint/explicit-function-return-type": "off",
 		"@typescript-eslint/explicit-member-accessibility": "off",
-		"@typescript-eslint/member-delimiter-style": "off"
+		"@typescript-eslint/member-delimiter-style": "off",
+		"@typescript-eslint/no-explicit-any": "off",
+		"@typescript-eslint/ban-ts-ignore": "off"
 	},
 	"overrides": [
 		{
