--- a/package.json
+++ b/package.json
@@ -38,14 +38,18 @@
 		"commit": "git-cz"
 	},
 	"dependencies": {
+		"@fiahfy/ico-convert": "0.0.7",
+		"adm-zip": "0.4.14",
 		"classnames": "2.2.6",
+		"multer": "1.4.2",
 		"next": "9.3.4",
 		"preact": "10.4.0",
 		"preact-render-to-string": "5.1.6",
 		"preact-ssr-prepass": "1.0.1",
 		"prop-types": "15.7.2",
 		"react": "16.13.1",
-		"react-dom": "16.13.1"
+		"react-dom": "16.13.1",
+		"sharp": "0.25.2"
 	},
 	"devDependencies": {
 		"@babel/core": "7.9.0",
@@ -61,9 +65,12 @@
 		"@storybook/addons": "5.3.18",
 		"@storybook/react": "5.3.18",
 		"@storybook/source-loader": "5.3.18",
+		"@types/adm-zip": "0.4.33",
 		"@types/classnames": "2.2.10",
+		"@types/multer": "1.4.2",
 		"@types/node": "13.11.1",
 		"@types/react": "16.9.34",
+		"@types/sharp": "0.24.0",
 		"@typescript-eslint/eslint-plugin": "2.27.0",
 		"@typescript-eslint/parser": "2.27.0",
 		"all-contributors-cli": "6.14.1",
