--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,5 +1,10 @@
 {
-	"extends": ["stylelint-config-recess-order", "stylelint-config-standard", "stylelint-config-prettier"],
+	"extends": [
+		"stylelint-config-recess-order",
+		"stylelint-config-standard",
+		"stylelint-config-css-modules",
+		"stylelint-config-prettier"
+	],
 	"plugins": ["stylelint-prettier"],
 	"rules": {
 		"prettier/prettier": true
