--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
 		"sass-loader": "8.0.2",
 		"semantic-release": "17.0.4",
 		"stylelint": "13.3.1",
+		"stylelint-config-css-modules": "2.2.0",
 		"stylelint-config-prettier": "8.0.1",
 		"stylelint-config-recess-order": "2.0.4",
 		"stylelint-config-standard": "20.0.0",
