--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
 		"prop-types": "15.7.2",
 		"react": "16.13.1",
 		"react-dom": "16.13.1",
-		"sharp": "0.25.2"
+		"sharp": "0.25.2",
+		"use-dark-mode": "2.3.1"
 	},
 	"devDependencies": {
 		"@babel/core": "7.9.0",
