feat: add dark mode toggle component (#21)
* feat: add dark mode toggle component

Add dark mode toggle component with custom hook

fix #14

* feat(dark-mode): add svgs, fix flash and css modules support

* docs: update get start guide and fix typos

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,15 @@
 		"alwaysStrict": true,
 		"noFallthroughCasesInSwitch": true,
 		"noUnusedLocals": true,
-		"noUnusedParameters": true
+		"noUnusedParameters": true,
+		"baseUrl": ".",
+		"paths": {
+			"components/*": ["components/*"],
+			"pages/*": ["pages/*"],
+			"theme/*": ["styles/*"],
+			"utils/*": ["utils/*"],
+			"hooks/*": ["hooks/*"]
+		}
 	},
 	"exclude": ["node_modules"],
 	"include": ["**/*.ts", "**/*.tsx", "./*.js", "./public/*.js"]
