feat(layout): add base page layout
Add base layout component with dark mode support

fix #15

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,5 @@
 		}
 	},
 	"exclude": ["node_modules"],
-	"include": ["**/*.ts", "**/*.tsx", "./*.js", "./public/*.js"]
+	"include": ["**/*.ts", "**/*.tsx", "./*.js", "./public/**/*.js"]
 }
