--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,5 +3,6 @@
 	"semanticCommits": true,
 	"stabilityDays": 3,
 	"prCreation": "not-pending",
-	"labels": ["Type: Chore"]
+	"labels": ["Type: Chore"],
+	"baseBranches": ["develop"]
 }
