--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"classnames": "2.2.6",
 		"multer": "1.4.2",
 		"next": "9.3.4",
+		"nprogress": "0.2.0",
 		"object-fit-images": "3.2.4",
 		"preact": "10.4.0",
 		"preact-render-to-string": "5.1.6",
@@ -73,6 +74,7 @@
 		"@types/classnames": "2.2.10",
 		"@types/multer": "1.4.2",
 		"@types/node": "13.11.1",
+		"@types/nprogress": "0.2.0",
 		"@types/object-fit-images": "3.2.0",
 		"@types/react": "16.9.34",
 		"@types/sharp": "0.24.0",
