improvement(upload): add download step 3

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	},
 	"dependencies": {
 		"@fiahfy/ico-convert": "0.0.7",
+		"@types/react-modal": "3.10.5",
 		"adm-zip": "0.4.14",
 		"classnames": "2.2.6",
 		"multer": "1.4.2",
@@ -48,11 +49,13 @@
 		"preact": "10.4.0",
 		"preact-render-to-string": "5.1.6",
 		"preact-ssr-prepass": "1.0.1",
+		"prismjs": "1.20.0",
 		"prop-types": "15.7.2",
 		"react": "16.13.1",
 		"react-dom": "16.13.1",
 		"react-dropzone": "10.2.2",
 		"react-lazy-images": "1.1.0",
+		"react-modal": "3.11.2",
 		"sharp": "0.25.2",
 		"use-dark-mode": "2.3.1"
 	},
@@ -76,6 +79,7 @@
 		"@types/node": "13.11.1",
 		"@types/nprogress": "0.2.0",
 		"@types/object-fit-images": "3.2.0",
+		"@types/prismjs": "1.16.0",
 		"@types/react": "16.9.34",
 		"@types/sharp": "0.24.0",
 		"@typescript-eslint/eslint-plugin": "2.27.0",
@@ -83,6 +87,7 @@
 		"all-contributors-cli": "6.14.1",
 		"babel-eslint": "10.1.0",
 		"babel-loader": "8.1.0",
+		"babel-plugin-prismjs": "2.0.1",
 		"babel-preset-react-app": "9.1.2",
 		"commitizen": "4.0.4",
 		"cz-conventional-changelog": "3.1.0",
