--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,14 @@
 {
-	"presets": ["next/babel"]
+	"presets": ["next/babel"],
+	"plugins": [
+		[
+			"prismjs",
+			{
+				"languages": ["markup"],
+				"plugins": [],
+				"theme": "default",
+				"css": false
+			}
+		]
+	]
 }
