--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"prismjs": "1.20.0",
 		"prop-types": "15.7.2",
 		"react": "16.13.1",
+		"react-clipboard.js": "2.0.16",
 		"react-dom": "16.13.1",
 		"react-dropzone": "10.2.2",
 		"react-lazy-images": "1.1.0",
