--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "favycon",
 	"version": "1.0.0",
-	"description": "A Favicon generator tool",
+	"description": "A favicon generator tool",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/ruisaraiva19/favycon.git"
