--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"react-dropzone": "10.2.2",
 		"react-lazy-images": "1.1.0",
 		"react-modal": "3.11.2",
+		"react-transition-group": "4.3.0",
 		"sharp": "0.25.2",
 		"use-dark-mode": "2.3.1"
 	},
@@ -85,6 +86,7 @@
 		"@types/prismjs": "1.16.0",
 		"@types/react": "16.9.34",
 		"@types/react-modal": "3.10.5",
+		"@types/react-transition-group": "4.2.4",
 		"@types/sharp": "0.24.0",
 		"@typescript-eslint/eslint-plugin": "2.29.0",
 		"@typescript-eslint/parser": "2.29.0",
