chore: update repo info

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,6 +1,6 @@
 {
   "projectName": "favycon",
-  "projectOwner": "ruisaraiva19",
+  "projectOwner": "toolslab",
   "repoType": "github",
   "repoHost": "https://github.com",
   "files": [
