--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,14 +17,7 @@
 		"noFallthroughCasesInSwitch": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"baseUrl": ".",
-		"paths": {
-			"components/*": ["components/*"],
-			"pages/*": ["pages/*"],
-			"theme/*": ["styles/*"],
-			"utils/*": ["utils/*"],
-			"hooks/*": ["hooks/*"]
-		}
+		"baseUrl": "."
 	},
 	"exclude": ["node_modules"],
 	"include": ["**/*.ts", "**/*.tsx", "./*.js", "./public/**/*.js"]
