--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
 		"react-modal": "3.11.2",
 		"react-transition-group": "4.4.1",
 		"sharp": "0.25.2",
-		"use-dark-mode": "2.3.1"
+		"ua-parser-js": "0.7.21",
+		"use-dark-mode": "2.3.1",
+		"use-media": "1.4.0"
 	},
 	"devDependencies": {
 		"@babel/core": "7.9.6",
@@ -84,11 +86,12 @@
 		"@types/node": "13.13.6",
 		"@types/nprogress": "0.2.0",
 		"@types/object-fit-images": "3.2.0",
-		"@types/prismjs": "1.16.0",
+		"@types/prismjs": "1.16.1",
 		"@types/react": "16.9.35",
 		"@types/react-modal": "3.10.5",
 		"@types/react-transition-group": "4.2.4",
 		"@types/sharp": "0.25.0",
+		"@types/ua-parser-js": "0.7.33",
 		"@typescript-eslint/eslint-plugin": "2.33.0",
 		"@typescript-eslint/parser": "2.33.0",
 		"all-contributors-cli": "6.14.2",
@@ -117,12 +120,13 @@
 		"sass": "1.26.5",
 		"sass-loader": "8.0.2",
 		"semantic-release": "17.0.7",
-		"stylelint": "13.3.3",
+		"stylelint": "13.4.0",
 		"stylelint-config-css-modules": "2.2.0",
 		"stylelint-config-prettier": "8.0.1",
 		"stylelint-config-recess-order": "2.0.4",
 		"stylelint-config-standard": "20.0.0",
 		"stylelint-prettier": "1.1.2",
+		"stylelint-scss": "3.17.2",
 		"typescript": "3.9.2",
 		"webpack-notifier": "1.8.0"
 	},
