--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,14 @@
 		"@typescript-eslint/explicit-member-accessibility": "off",
 		"@typescript-eslint/member-delimiter-style": "off",
 		"@typescript-eslint/no-explicit-any": "off",
-		"@typescript-eslint/ban-ts-ignore": "off"
+		"@typescript-eslint/ban-ts-ignore": "off",
+		"@typescript-eslint/explicit-module-boundary-types": "off",
+		"@typescript-eslint/no-unsafe-call": "off",
+		"@typescript-eslint/no-extra-semi": "off",
+		"@typescript-eslint/no-unsafe-assignment": "off",
+		"@typescript-eslint/no-unsafe-return": "off",
+		"@typescript-eslint/no-floating-promises": "off",
+		"@typescript-eslint/no-unsafe-member-access": "off"
 	},
 	"overrides": [
 		{
