--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
 		"storybook": "start-storybook -s ./public -p 6006",
 		"storybook:build": "build-storybook -s ./public",
 		"commit": "git-cz",
-		"chromatic": "chromatic --build-script-name=storybook:build"
+		"e2e": "start-test dev 3000 cy:open",
+		"cy:open": "cypress open"
 	},
 	"dependencies": {
 		"@fiahfy/ico-convert": "0.0.7",
@@ -97,6 +98,7 @@
 		"babel-plugin-prismjs": "2.0.1",
 		"babel-preset-react-app": "9.1.2",
 		"commitizen": "4.1.2",
+		"cypress": "4.8.0",
 		"cz-conventional-changelog": "3.2.0",
 		"dotenv": "8.2.0",
 		"eslint": "6.8.0",
@@ -117,6 +119,7 @@
 		"sass": "1.26.8",
 		"sass-loader": "8.0.2",
 		"semantic-release": "17.0.8",
+		"start-server-and-test": "1.11.0",
 		"stylelint": "13.6.0",
 		"stylelint-config-css-modules": "2.2.0",
 		"stylelint-config-prettier": "8.0.1",
