--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,6 @@
 		"module": "esnext",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
-		"isolatedModules": true,
 		"jsx": "preserve",
 		"alwaysStrict": true,
 		"noFallthroughCasesInSwitch": true,
@@ -20,5 +19,5 @@
 		"baseUrl": "."
 	},
 	"exclude": ["node_modules"],
-	"include": ["**/*.ts", "**/*.tsx", "./*.js", "./public/**/*.js"]
+	"include": ["**/*.ts", "**/*.tsx", "./*.js", "./public/**/*.js", "./cypress/**/*.js"]
 }
