refactor(cypress): migrate from tsconfig.json to .eslintrc.json

--- a/package.json
+++ b/package.json
@@ -98,13 +98,14 @@
 		"babel-plugin-prismjs": "2.0.1",
 		"babel-preset-react-app": "9.1.2",
 		"commitizen": "4.1.2",
-		"cypress": "4.8.0",
+		"cypress": "4.9.0",
 		"cz-conventional-changelog": "3.2.0",
 		"dotenv": "8.2.0",
 		"eslint": "6.8.0",
 		"eslint-config-prettier": "6.11.0",
 		"eslint-config-react": "1.1.7",
 		"eslint-config-react-app": "5.2.1",
+		"eslint-plugin-cypress": "2.11.1",
 		"eslint-plugin-flowtype": "4.7.0",
 		"eslint-plugin-import": "2.21.2",
 		"eslint-plugin-jsx-a11y": "6.3.1",
