feat: setup Cypress (#136)
* feat(cypress): setup cypress with Next.js

* ci(cypress): run cypress on pull requests

* refactor(cypress): migrate from tsconfig.json to .eslintrc.json

* ci: update job names

* ci(cypress): save cypress artifacts

* fix(analytics): fix analytics extra script html tags

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
 		"baseUrl": "."
 	},
 	"exclude": ["node_modules"],
-	"include": ["**/*.ts", "**/*.tsx", "./*.js", "./public/**/*.js"]
+	"include": ["**/*.ts", "**/*.tsx", "./*.js", "./public/**/*.js", "./cypress/**/*.js"]
 }
