--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
 		"storybook": "start-storybook -s ./public -p 6006",
 		"storybook:build": "build-storybook -s ./public",
 		"commit": "git-cz",
-		"chromatic": "chromatic --build-script-name=storybook:build"
+		"e2e": "start-test dev 3000 cy:open",
+		"cy:open": "cypress open"
 	},
 	"dependencies": {
 		"@fiahfy/ico-convert": "0.0.7",
@@ -97,12 +98,14 @@
 		"babel-plugin-prismjs": "2.0.1",
 		"babel-preset-react-app": "9.1.2",
 		"commitizen": "4.1.2",
+		"cypress": "4.9.0",
 		"cz-conventional-changelog": "3.2.0",
 		"dotenv": "8.2.0",
 		"eslint": "6.8.0",
 		"eslint-config-prettier": "6.11.0",
 		"eslint-config-react": "1.1.7",
 		"eslint-config-react-app": "5.2.1",
+		"eslint-plugin-cypress": "2.11.1",
 		"eslint-plugin-flowtype": "4.7.0",
 		"eslint-plugin-import": "2.21.2",
 		"eslint-plugin-jsx-a11y": "6.3.1",
@@ -117,6 +120,7 @@
 		"sass": "1.26.9",
 		"sass-loader": "8.0.2",
 		"semantic-release": "17.0.8",
+		"start-server-and-test": "1.11.0",
 		"stylelint": "13.6.1",
 		"stylelint-config-css-modules": "2.2.0",
 		"stylelint-config-prettier": "8.0.2",
