--- a/cypress/.eslintrc.json
+++ b/cypress/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-	"extends": ["plugin:cypress/recommended"]
+	"extends": ["plugin:cypress/recommended"],
+	"rules": {
+		"cypress/no-unnecessary-waiting": "off"
+	}
 }
