chore: update dependencies, remove duplicated tsc and ignore macOS files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,14 +2,14 @@
 	"parser": "@typescript-eslint/parser",
 	"extends": [
 		"react-app",
-		"prettier",
+		"plugin:prettier/recommended",
 		"prettier/react",
 		"prettier/@typescript-eslint",
 		"plugin:react/recommended",
+		"plugin:react-hooks/recommended",
 		"plugin:@typescript-eslint/recommended",
 		"plugin:@typescript-eslint/recommended-requiring-type-checking"
 	],
-	"plugins": ["@typescript-eslint", "react", "react-hooks", "prettier"],
 	"parserOptions": {
 		"project": "./tsconfig.json"
 	},
@@ -17,7 +17,12 @@
 		"prettier/prettier": "error",
 		"react/prop-types": "off",
 		"no-param-reassign": "off",
-		"react/jsx-filename-extension": [1, { "extensions": [".js", ".ts", "tsx"] }],
+		"react/jsx-filename-extension": [
+			1,
+			{
+				"extensions": [".js", ".ts", ".tsx"]
+			}
+		],
 		"@typescript-eslint/explicit-function-return-type": "off",
 		"@typescript-eslint/explicit-member-accessibility": "off",
 		"@typescript-eslint/member-delimiter-style": "off",
