--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 	"author": {
 		"name": "Rui Saraiva",
 		"email": "ruisaraiva19@gmail.com",
-		"url": "https://ruisaraiva.com/"
+		"url": "https://ruisaraiva.dev/"
 	},
 	"license": "MIT",
 	"bugs": {
@@ -26,16 +26,15 @@
 	},
 	"homepage": "https://github.com/ruisaraiva19/favycon#readme",
 	"engines": {
-		"node": ">= 10.x"
+		"node": ">= 10.13"
 	},
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
 		"lint": "npm-run-all --parallel lint:*",
-		"lint:types": "tsc",
-		"lint:scripts": "eslint './**/*.tsx' './**/*.ts' './**/*.js'",
-		"lint:css": "stylelint './**/*.css' './**/*.scss'",
+		"lint:scripts": "eslint --ext js,jsx,ts,tsx .",
+		"lint:styles": "stylelint ./**/*.{css,scss}",
 		"storybook": "start-storybook -s ./public -p 6006",
 		"storybook:build": "build-storybook -s ./public",
 		"commit": "git-cz",
@@ -102,17 +101,17 @@
 		"cypress-file-upload": "4.0.7",
 		"cz-conventional-changelog": "3.2.0",
 		"dotenv": "8.2.0",
-		"eslint": "6.8.0",
+		"eslint": "7.4.0",
 		"eslint-config-prettier": "6.11.0",
 		"eslint-config-react": "1.1.7",
 		"eslint-config-react-app": "5.2.1",
 		"eslint-plugin-cypress": "2.11.1",
-		"eslint-plugin-flowtype": "4.7.0",
+		"eslint-plugin-flowtype": "5.2.0",
 		"eslint-plugin-import": "2.22.0",
 		"eslint-plugin-jsx-a11y": "6.3.1",
 		"eslint-plugin-prettier": "3.1.4",
 		"eslint-plugin-react": "7.20.3",
-		"eslint-plugin-react-hooks": "2.5.1",
+		"eslint-plugin-react-hooks": "4.0.5",
 		"husky": "4.2.5",
 		"lint-staged": "10.2.11",
 		"npm-run-all": "4.1.5",
