--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 	},
 	"dependencies": {
 		"@fiahfy/ico-convert": "0.0.7",
+		"@prefresh/next": "0.3.2",
 		"adm-zip": "0.4.16",
 		"classnames": "2.2.6",
 		"multer": "1.4.2",
@@ -116,6 +117,7 @@
 		"lint-staged": "10.2.11",
 		"npm-run-all": "4.1.5",
 		"prettier": "2.0.5",
+		"react-refresh": "0.8.3",
 		"regenerator-runtime": "0.13.5",
 		"sass": "1.26.10",
 		"sass-loader": "9.0.2",
