--- a/.huskyrc.json
+++ b/.huskyrc.json
@@ -1,7 +1,8 @@
 {
-  "hooks": {
-    "pre-commit": "lint-staged",
-    "pre-push": "npm run lint",
-    "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-  }
+	"hooks": {
+		"pre-commit": "lint-staged",
+		"pre-push": "npm run lint",
+		"commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+		"prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+	}
 }
