--- a/package.json
+++ b/package.json
@@ -118,6 +118,9 @@
 		"husky": "4.2.5",
 		"lint-staged": "10.2.11",
 		"npm-run-all": "4.1.5",
+		"postcss-100vh-fix": "0.1.1",
+		"postcss-flexbugs-fixes": "4.2.1",
+		"postcss-preset-env": "6.7.0",
 		"prettier": "2.0.5",
 		"regenerator-runtime": "0.13.5",
 		"sass": "1.26.9",
