chore(deps): upgraded dependencies

--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
 		"lint:styles": "stylelint ./**/*.{css,scss}",
 		"storybook": "start-storybook -s ./public -p 6006",
 		"storybook:build": "build-storybook -s ./public",
-		"cm": "git-cz",
+		"commit": "git-cz",
 		"e2e": "start-test dev 3000 cy:open",
 		"cy:open": "cypress open"
 	},
 	"dependencies": {
 		"@fiahfy/ico-convert": "0.0.7",
-		"@prefresh/next": "0.3.2",
+		"@prefresh/next": "0.4.0",
 		"adm-zip": "0.4.16",
 		"classnames": "2.2.6",
 		"multer": "1.4.2",
@@ -52,7 +52,7 @@
 		"object-fit-images": "3.2.4",
 		"preact": "10.4.7",
 		"preact-render-to-string": "5.1.10",
-		"preact-ssr-prepass": "1.1.0",
+		"preact-ssr-prepass": "1.1.1",
 		"prismjs": "1.21.0",
 		"prop-types": "15.7.2",
 		"react": "16.13.1",
@@ -86,7 +86,7 @@
 		"@types/nprogress": "0.2.0",
 		"@types/object-fit-images": "3.2.0",
 		"@types/prismjs": "1.16.1",
-		"@types/react": "16.9.44",
+		"@types/react": "16.9.45",
 		"@types/react-modal": "3.10.6",
 		"@types/react-transition-group": "4.4.0",
 		"@types/sharp": "0.25.1",
@@ -122,7 +122,7 @@
 		"sass": "1.26.10",
 		"sass-loader": "9.0.3",
 		"semantic-release": "17.1.1",
-		"start-server-and-test": "1.11.2",
+		"start-server-and-test": "1.11.3",
 		"stylelint": "13.6.1",
 		"stylelint-config-css-modules": "2.2.0",
 		"stylelint-config-prettier": "8.0.2",
