--- a/.huskyrc.json
+++ b/.huskyrc.json
@@ -2,7 +2,6 @@
 	"hooks": {
 		"pre-commit": "lint-staged",
 		"pre-push": "npm run lint",
-		"commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-		"prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+		"commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
 	}
 }
