--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
 		"@typescript-eslint/member-delimiter-style": "off",
 		"@typescript-eslint/no-explicit-any": "off",
 		"@typescript-eslint/ban-ts-ignore": "off",
+		"@typescript-eslint/ban-ts-comment": "off",
 		"@typescript-eslint/explicit-module-boundary-types": "off",
 		"@typescript-eslint/no-unsafe-call": "off",
 		"@typescript-eslint/no-extra-semi": "off",
