--- a/package.json
+++ b/package.json
@@ -62,8 +62,9 @@
 		"react-lazy-images": "1.1.0",
 		"react-modal": "3.11.2",
 		"react-transition-group": "4.4.1",
-		"sharp": "0.26.0",
-		"use-dark-mode": "2.3.1"
+		"sharp": "0.25.0",
+		"use-dark-mode": "2.3.1",
+		"use-media": "1.4.0"
 	},
 	"devDependencies": {
 		"@babel/core": "7.11.6",
@@ -116,6 +117,9 @@
 		"husky": "4.2.5",
 		"lint-staged": "10.3.0",
 		"npm-run-all": "4.1.5",
+		"postcss-100vh-fix": "0.1.1",
+		"postcss-flexbugs-fixes": "4.2.1",
+		"postcss-preset-env": "6.7.0",
 		"prettier": "2.1.1",
 		"react-refresh": "0.8.3",
 		"regenerator-runtime": "0.13.7",
@@ -129,6 +133,7 @@
 		"stylelint-config-recess-order": "2.1.0",
 		"stylelint-config-standard": "20.0.0",
 		"stylelint-prettier": "1.1.2",
+		"stylelint-scss": "3.17.2",
 		"typescript": "3.9.7",
 		"webpack-notifier": "1.8.0"
 	},
