--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"react-lazy-images": "1.1.0",
 		"react-modal": "3.11.2",
 		"react-transition-group": "4.4.1",
+		"react-use-gesture": "7.0.16",
 		"sharp": "0.25.0",
 		"use-dark-mode": "2.3.1",
 		"use-media": "1.4.0"
