--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,31 +3,34 @@ name: Tests
 on: pull_request
 
 jobs:
-  wait_deploy:
-    name: Wait Vercel Deploy
-    runs-on: ubuntu-latest
-    outputs:
-      preview_url: ${{ steps.waitForVercelPreviewDeployment.outputs.url }}
-    steps:
-      - name: Wait for Vercel preview deployment to be ready
-        uses: patrickedqvist/wait-for-vercel-preview@master
-        id: waitForVercelPreviewDeployment
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          max_timeout: 120
-
   test_e2e:
     name: Run Cypress
-    needs: wait_deploy
     runs-on: ubuntu-16.04
     steps:
       - uses: actions/checkout@v2
-      - name: Run Cypress
-        uses: cypress-io/github-action@v1
+
+      - name: Use Node.js 12
+        uses: actions/setup-node@v1
         with:
-          config: baseUrl=${{ needs.wait_deploy.outputs.preview_url }}
-          wait-on: ${{ needs.wait_deploy.outputs.preview_url }}
-          wait-on-timeout: 120
+          node-version: "12"
+
+      - name: Install dependencies
+        uses: bahmutov/npm-install@v1
+
+      - name: Cache Next.js build cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}
+
+      - name: Build static assets
+        run: yarn build
+
+      - name: Run Cypress
+        uses: cypress-io/github-action@v2
+        with:
+          start: npm start
+          wait-on: http://localhost:3000
       # after the test run completes
       # store videos and any screenshots
       # NOTE: screenshots will be generated only if E2E test failed
