--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,9 +15,14 @@ jobs:
       - name: Use Node.js 12
         uses: actions/setup-node@v1
         with:
-          node-version: "12"
+          node-version: '12'
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
+      - name: Cache Next.js build cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}
       - name: Build static assets
         run: yarn build
       - name: Semantic Release
