chore(node): upgrade Node.js to v14

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,6 +46,12 @@
 			"rules": {
 				"@typescript-eslint/no-var-requires": "off"
 			}
+		},
+		{
+			"files": ["components/**/*.stories.tsx", "pages/api/**/*.ts"],
+			"rules": {
+				"import/no-anonymous-default-export": "off"
+			}
 		}
 	]
 }
