--- a/package.json
+++ b/package.json
@@ -25,9 +25,6 @@
 		"url": "https://github.com/ruisaraiva19/favycon/issues"
 	},
 	"homepage": "https://github.com/ruisaraiva19/favycon#readme",
-	"engines": {
-		"node": ">= 10.13"
-	},
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
@@ -45,17 +42,19 @@
 		"@fiahfy/ico-convert": "0.0.7",
 		"@prefresh/next": "1.4.4",
 		"adm-zip": "0.4.16",
+		"blurhash": "1.1.3",
 		"classnames": "2.2.6",
 		"multer": "1.4.2",
-		"next": "9.5.5",
+		"next": "10.0.6",
 		"nprogress": "0.2.0",
 		"object-fit-images": "3.2.4",
-		"preact": "10.5.11",
+		"preact": "10.5.12",
 		"preact-render-to-string": "5.1.12",
-		"preact-ssr-prepass": "1.1.2",
-		"prismjs": "1.22.0",
+		"preact-ssr-prepass": "1.1.3",
+		"prismjs": "1.23.0",
 		"prop-types": "15.7.2",
 		"react": "16.14.0",
+		"react-blurhash": "0.1.3",
 		"react-clipboard.js": "2.0.16",
 		"react-dom": "16.14.0",
 		"react-dropzone": "11.2.4",
@@ -68,7 +67,7 @@
 		"use-media": "1.4.0"
 	},
 	"devDependencies": {
-		"@babel/core": "7.12.10",
+		"@babel/core": "7.12.13",
 		"@commitlint/cli": "11.0.0",
 		"@commitlint/config-conventional": "11.0.0",
 		"@storybook/addon-actions": "5.3.21",
@@ -84,51 +83,51 @@
 		"@types/adm-zip": "0.4.33",
 		"@types/classnames": "2.2.11",
 		"@types/multer": "1.4.4",
-		"@types/node": "14.14.22",
+		"@types/node": "14.14.25",
 		"@types/nprogress": "0.2.0",
 		"@types/object-fit-images": "3.2.0",
 		"@types/prismjs": "1.16.2",
-		"@types/react": "17.0.0",
+		"@types/react": "17.0.1",
 		"@types/react-modal": "3.10.6",
 		"@types/react-transition-group": "4.4.0",
 		"@types/sharp": "0.25.1",
-		"@typescript-eslint/eslint-plugin": "4.14.0",
-		"@typescript-eslint/parser": "4.14.0",
+		"@typescript-eslint/eslint-plugin": "4.14.2",
+		"@typescript-eslint/parser": "4.14.2",
 		"all-contributors-cli": "6.19.0",
 		"babel-eslint": "10.1.0",
 		"babel-loader": "8.2.2",
 		"babel-plugin-prismjs": "2.0.1",
 		"babel-preset-react-app": "10.0.0",
-		"commitizen": "4.2.2",
+		"commitizen": "4.2.3",
 		"cypress": "5.6.0",
 		"cypress-file-upload": "4.1.1",
 		"cz-conventional-changelog": "3.3.0",
 		"dotenv": "8.2.0",
-		"eslint": "7.16.0",
-		"eslint-config-prettier": "7.1.0",
+		"eslint": "7.19.0",
+		"eslint-config-prettier": "7.2.0",
 		"eslint-config-react": "1.1.7",
 		"eslint-config-react-app": "6.0.0",
 		"eslint-plugin-cypress": "2.11.2",
 		"eslint-plugin-flowtype": "5.2.0",
 		"eslint-plugin-import": "2.22.1",
 		"eslint-plugin-jsx-a11y": "6.4.1",
-		"eslint-plugin-prettier": "3.3.0",
+		"eslint-plugin-prettier": "3.3.1",
 		"eslint-plugin-react": "7.22.0",
 		"eslint-plugin-react-hooks": "4.2.0",
-		"husky": "4.3.6",
-		"lint-staged": "10.5.3",
+		"husky": "4.3.8",
+		"lint-staged": "10.5.4",
 		"npm-run-all": "4.1.5",
-		"postcss-100vh-fix": "0.1.1",
-		"postcss-flexbugs-fixes": "4.2.1",
+		"postcss-100vh-fix": "1.0.2",
+		"postcss-flexbugs-fixes": "5.0.2",
 		"postcss-preset-env": "6.7.0",
 		"prettier": "2.2.1",
 		"react-refresh": "0.9.0",
 		"regenerator-runtime": "0.13.7",
-		"sass": "1.32.5",
-		"sass-loader": "10.1.0",
-		"semantic-release": "17.3.0",
-		"start-server-and-test": "1.11.7",
-		"stylelint": "13.8.0",
+		"sass": "1.32.6",
+		"sass-loader": "10.1.1",
+		"semantic-release": "17.3.7",
+		"start-server-and-test": "1.12.0",
+		"stylelint": "13.9.0",
 		"stylelint-config-css-modules": "2.2.0",
 		"stylelint-config-prettier": "8.0.2",
 		"stylelint-config-recess-order": "2.3.0",
@@ -136,7 +135,7 @@
 		"stylelint-prettier": "1.1.2",
 		"stylelint-scss": "3.18.0",
 		"typescript": "3.9.7",
-		"webpack-notifier": "1.12.0"
+		"webpack-notifier": "1.13.0"
 	},
 	"config": {
 		"commitizen": {
