--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,9 @@
 {
 	"parser": "@typescript-eslint/parser",
 	"extends": [
-		"react-app",
+		"next",
 		"plugin:prettier/recommended",
-		"plugin:react/recommended",
-		"plugin:react-hooks/recommended",
+		"plugin:storybook/recommended",
 		"plugin:@typescript-eslint/recommended",
 		"plugin:@typescript-eslint/recommended-requiring-type-checking"
 	],
