--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
 		"noFallthroughCasesInSwitch": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"baseUrl": "."
+		"baseUrl": ".",
+		"incremental": true
 	},
 	"exclude": ["node_modules"],
 	"include": ["**/*.ts", "**/*.tsx", "./*.js", "./public/**/*.js", "./cypress/**/*.js"]
