--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,13 +9,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node.js 14
+      - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: "14"
+          node-version-file: '.nvmrc'
+          cache: 'yarn'
       - name: Install dependencies
-        uses: bahmutov/npm-install@v1
+        run: yarn install --frozen-lockfile
       - name: Lint Scripts
         run: yarn lint:scripts
       - name: Lint CSS
         run: yarn lint:styles
+      - name: Lint JSON
+        run: yarn lint:json
