--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "favycon",
 	"version": "1.0.0",
 	"description": "A favicon generator tool",
+	"private": true,
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/ruisaraiva19/favycon.git"
@@ -30,107 +31,109 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "npm-run-all --parallel lint:*",
-		"lint:scripts": "eslint --ext js,jsx,ts,tsx .",
-		"lint:styles": "stylelint ./**/*.{css,scss}",
-		"storybook": "start-storybook -s ./public -p 6006",
-		"storybook:build": "build-storybook -s ./public",
+		"lint:scripts": "eslint .",
+		"lint:styles": "npx stylelint \"**/*.{css,scss}\"",
+		"lint:json": "prettier --check \"**/*.json\"",
+		"postinstall": "husky install",
+		"storybook": "start-storybook -p 6006",
+		"storybook:build": "build-storybook",
 		"commit": "git-cz",
 		"e2e": "start-test dev 3000 cy:open",
 		"cy:open": "cypress open"
 	},
 	"dependencies": {
-		"@fiahfy/ico-convert": "0.0.7",
-		"adm-zip": "0.4.16",
-		"blurhash": "1.1.3",
+		"@fiahfy/ico-convert": "0.0.12",
+		"adm-zip": "0.5.9",
+		"blurhash": "1.1.4",
 		"classnames": "2.3.1",
-		"multer": "1.4.2",
-		"next": "10.2.3",
+		"multer": "1.4.3",
+		"next": "12.0.6",
 		"nprogress": "0.2.0",
 		"object-fit-images": "3.2.4",
-		"prismjs": "1.24.1",
+		"prismjs": "1.25.0",
 		"prop-types": "15.7.2",
-		"react": "16.14.0",
+		"react": "17.0.2",
 		"react-blurhash": "0.1.3",
 		"react-clipboard.js": "2.0.16",
-		"react-dom": "16.14.0",
-		"react-dropzone": "11.3.4",
+		"react-dom": "17.0.2",
+		"react-dropzone": "11.4.2",
 		"react-lazy-images": "1.1.0",
-		"react-modal": "3.14.3",
+		"react-modal": "3.14.4",
 		"react-transition-group": "4.4.2",
-		"react-use-gesture": "7.0.16",
-		"sharp": "0.25.0",
-		"use-dark-mode": "2.3.1",
-		"use-media": "1.4.0"
+		"react-use": "17.3.1",
+		"react-use-gesture": "7.0.16"
 	},
 	"devDependencies": {
-		"@babel/core": "7.14.6",
-		"@commitlint/cli": "12.1.4",
-		"@commitlint/config-conventional": "12.1.4",
-		"@storybook/addon-actions": "5.3.21",
-		"@storybook/addon-backgrounds": "5.3.21",
-		"@storybook/addon-console": "1.2.2",
-		"@storybook/addon-knobs": "5.3.21",
-		"@storybook/addon-links": "5.3.21",
-		"@storybook/addon-storysource": "5.3.21",
-		"@storybook/addon-viewport": "5.3.21",
-		"@storybook/addons": "5.3.21",
-		"@storybook/react": "5.3.21",
-		"@storybook/source-loader": "5.3.21",
-		"@types/adm-zip": "0.4.33",
+		"@babel/core": "7.16.0",
+		"@commitlint/cli": "15.0.0",
+		"@commitlint/config-conventional": "15.0.0",
+		"@storybook/addon-a11y": "6.4.7",
+		"@storybook/addon-actions": "6.4.7",
+		"@storybook/addon-console": "1.2.3",
+		"@storybook/addon-docs": "6.4.7",
+		"@storybook/addon-essentials": "6.4.7",
+		"@storybook/addon-links": "6.4.7",
+		"@storybook/addon-postcss": "2.0.0",
+		"@storybook/addons": "6.4.7",
+		"@storybook/api": "6.4.7",
+		"@storybook/builder-webpack5": "6.4.7",
+		"@storybook/client-api": "6.4.7",
+		"@storybook/components": "6.4.7",
+		"@storybook/core-events": "6.4.7",
+		"@storybook/manager-webpack5": "6.4.7",
+		"@storybook/node-logger": "6.4.7",
+		"@storybook/react": "6.4.7",
+		"@storybook/theming": "6.4.7",
+		"@types/adm-zip": "0.4.34",
 		"@types/multer": "1.4.7",
-		"@types/node": "14.14.34",
+		"@types/node": "16.11.11",
 		"@types/nprogress": "0.2.0",
 		"@types/object-fit-images": "3.2.2",
 		"@types/prismjs": "1.16.6",
-		"@types/react": "17.0.14",
-		"@types/react-modal": "3.12.1",
-		"@types/react-transition-group": "4.4.2",
-		"@types/sharp": "0.25.1",
-		"@typescript-eslint/eslint-plugin": "4.28.3",
-		"@typescript-eslint/parser": "4.28.3",
+		"@types/react": "17.0.37",
+		"@types/react-modal": "3.13.1",
+		"@types/react-transition-group": "4.4.4",
+		"@types/sharp": "0.29.4",
+		"@typescript-eslint/eslint-plugin": "5.5.0",
+		"@typescript-eslint/parser": "5.5.0",
 		"all-contributors-cli": "6.20.0",
-		"babel-eslint": "10.1.0",
-		"babel-loader": "8.2.2",
-		"babel-plugin-prismjs": "2.1.0",
-		"babel-preset-react-app": "10.0.0",
+		"babel-loader": "8.2.3",
 		"commitizen": "4.2.4",
-		"cypress": "5.6.0",
-		"cypress-file-upload": "4.1.1",
+		"cypress": "9.1.1",
+		"cypress-file-upload": "5.0.8",
 		"cz-conventional-changelog": "3.3.0",
 		"dotenv": "10.0.0",
-		"eslint": "7.30.0",
+		"eslint": "8.4.0",
+		"eslint-config-next": "12.0.6",
 		"eslint-config-prettier": "8.3.0",
-		"eslint-config-react": "1.1.7",
-		"eslint-config-react-app": "6.0.0",
-		"eslint-plugin-cypress": "2.11.3",
-		"eslint-plugin-flowtype": "5.8.0",
-		"eslint-plugin-import": "2.23.4",
-		"eslint-plugin-jsx-a11y": "6.4.1",
-		"eslint-plugin-prettier": "3.4.0",
-		"eslint-plugin-react": "7.24.0",
-		"eslint-plugin-react-hooks": "4.2.0",
-		"husky": "4.3.8",
-		"lint-staged": "11.0.0",
+		"eslint-plugin-cypress": "2.12.1",
+		"eslint-plugin-prettier": "4.0.0",
+		"eslint-plugin-storybook": "0.5.3",
+		"husky": "7.0.4",
+		"lint-staged": "12.1.2",
 		"npm-run-all": "4.1.5",
+		"postcss": "8.4.4",
 		"postcss-100vh-fix": "1.0.2",
 		"postcss-flexbugs-fixes": "5.0.2",
-		"postcss-preset-env": "6.7.0",
+		"postcss-preset-env": "7.0.1",
+		"postcss-scss": "4.0.2",
 		"prettier": "2.3.2",
-		"react-refresh": "0.10.0",
-		"regenerator-runtime": "0.13.7",
-		"sass": "1.35.2",
-		"sass-loader": "12.1.0",
-		"semantic-release": "17.4.4",
-		"start-server-and-test": "1.12.6",
-		"stylelint": "13.13.1",
-		"stylelint-config-css-modules": "2.2.0",
-		"stylelint-config-prettier": "8.0.2",
-		"stylelint-config-recess-order": "2.4.0",
-		"stylelint-config-standard": "22.0.0",
-		"stylelint-prettier": "1.2.0",
-		"stylelint-scss": "3.19.0",
-		"typescript": "4.3.5",
-		"webpack-notifier": "1.13.0"
+		"react-refresh": "0.11.0",
+		"sass": "1.44.0",
+		"sass-loader": "12.3.0",
+		"semantic-release": "18.0.1",
+		"start-server-and-test": "1.14.0",
+		"storybook-addon-next-router": "3.1.0",
+		"storybook-dark-mode": "1.0.8",
+		"stylelint": "14.1.0",
+		"stylelint-config-css-modules": "2.3.0",
+		"stylelint-config-prettier": "9.0.3",
+		"stylelint-config-recess-order": "3.0.0",
+		"stylelint-config-standard": "24.0.0",
+		"stylelint-prettier": "2.0.0",
+		"stylelint-scss": "4.0.0",
+		"typescript": "4.4.4",
+		"webpack": "5.64.4"
 	},
 	"config": {
 		"commitizen": {
