--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 	},
 	"dependencies": {
 		"@fiahfy/ico-convert": "0.0.12",
+		"@use-gesture/react": "10.2.0",
 		"adm-zip": "0.5.9",
 		"blurhash": "1.1.4",
 		"classnames": "2.3.1",
@@ -57,8 +58,7 @@
 		"react-dropzone": "11.4.2",
 		"react-modal": "3.14.4",
 		"react-transition-group": "4.4.2",
-		"react-use": "17.3.1",
-		"react-use-gesture": "7.0.16"
+		"react-use": "17.3.1"
 	},
 	"devDependencies": {
 		"@babel/core": "7.16.0",
