--- a/package.json
+++ b/package.json
@@ -44,93 +44,94 @@
 	"dependencies": {
 		"@fiahfy/ico-convert": "0.0.12",
 		"@splitbee/web": "0.3.0",
-		"@use-gesture/react": "10.2.0",
+		"@use-gesture/react": "10.2.16",
 		"adm-zip": "0.5.9",
-		"blurhash": "1.1.4",
+		"blurhash": "1.1.5",
 		"classnames": "2.3.1",
 		"multer": "1.4.3",
-		"next": "12.0.6",
+		"next": "12.2.0",
 		"nprogress": "0.2.0",
-		"prismjs": "1.25.0",
-		"prop-types": "15.7.2",
+		"prismjs": "1.28.0",
+		"prop-types": "15.8.1",
 		"react": "17.0.2",
 		"react-clipboard.js": "2.0.16",
 		"react-dom": "17.0.2",
 		"react-dropzone": "11.4.2",
-		"react-modal": "3.14.4",
+		"react-modal": "3.15.1",
 		"react-transition-group": "4.4.2",
-		"react-use": "17.3.1"
+		"react-use": "17.4.0"
 	},
 	"devDependencies": {
-		"@babel/core": "7.16.0",
-		"@commitlint/cli": "15.0.0",
-		"@commitlint/config-conventional": "15.0.0",
-		"@storybook/addon-a11y": "6.4.7",
-		"@storybook/addon-actions": "6.4.7",
+		"@babel/core": "7.18.6",
+		"@commitlint/cli": "17.0.3",
+		"@commitlint/config-conventional": "17.0.3",
+		"@storybook/addon-a11y": "6.5.9",
+		"@storybook/addon-actions": "6.5.9",
 		"@storybook/addon-console": "1.2.3",
-		"@storybook/addon-docs": "6.4.7",
-		"@storybook/addon-essentials": "6.4.7",
-		"@storybook/addon-links": "6.4.7",
+		"@storybook/addon-docs": "6.5.9",
+		"@storybook/addon-essentials": "6.5.9",
+		"@storybook/addon-links": "6.5.9",
 		"@storybook/addon-postcss": "2.0.0",
-		"@storybook/addons": "6.4.7",
-		"@storybook/api": "6.4.7",
-		"@storybook/builder-webpack5": "6.4.7",
-		"@storybook/client-api": "6.4.7",
-		"@storybook/components": "6.4.7",
-		"@storybook/core-events": "6.4.7",
-		"@storybook/manager-webpack5": "6.4.7",
-		"@storybook/node-logger": "6.4.7",
-		"@storybook/react": "6.4.7",
-		"@storybook/theming": "6.4.7",
+		"@storybook/addons": "6.5.9",
+		"@storybook/api": "6.5.9",
+		"@storybook/builder-webpack5": "6.5.9",
+		"@storybook/client-api": "6.5.9",
+		"@storybook/components": "6.5.9",
+		"@storybook/core-events": "6.5.9",
+		"@storybook/manager-webpack5": "6.5.9",
+		"@storybook/node-logger": "6.5.9",
+		"@storybook/react": "6.5.9",
+		"@storybook/theming": "6.5.9",
 		"@types/adm-zip": "0.4.34",
 		"@types/multer": "1.4.7",
 		"@types/node": "16.11.11",
 		"@types/nprogress": "0.2.0",
-		"@types/prismjs": "1.16.6",
+		"@types/prismjs": "1.26.0",
 		"@types/react": "17.0.37",
 		"@types/react-modal": "3.13.1",
-		"@types/react-transition-group": "4.4.4",
+		"@types/react-transition-group": "4.4.5",
 		"@types/sharp": "0.29.4",
-		"@typescript-eslint/eslint-plugin": "5.5.0",
-		"@typescript-eslint/parser": "5.5.0",
+		"@typescript-eslint/eslint-plugin": "5.30.5",
+		"@typescript-eslint/parser": "5.30.5",
 		"all-contributors-cli": "6.20.0",
-		"babel-loader": "8.2.3",
+		"babel-loader": "8.2.5",
 		"commitizen": "4.2.4",
-		"cypress": "9.1.1",
+		"cypress": "10.3.0",
 		"cypress-file-upload": "5.0.8",
 		"cz-conventional-changelog": "3.3.0",
-		"dotenv": "10.0.0",
-		"eslint": "8.4.0",
-		"eslint-config-next": "12.0.6",
-		"eslint-config-prettier": "8.3.0",
+		"dotenv": "16.0.1",
+		"eslint": "8.19.0",
+		"eslint-config-next": "12.2.0",
+		"eslint-config-prettier": "8.5.0",
 		"eslint-plugin-cypress": "2.12.1",
-		"eslint-plugin-prettier": "4.0.0",
-		"eslint-plugin-storybook": "0.5.3",
-		"husky": "7.0.4",
-		"lint-staged": "12.1.2",
+		"eslint-plugin-prettier": "4.2.1",
+		"eslint-plugin-storybook": "0.5.13",
+		"husky": "8.0.1",
+		"lint-staged": "13.0.3",
 		"npm-run-all": "4.1.5",
-		"postcss": "8.4.4",
+		"postcss": "8.4.14",
 		"postcss-100vh-fix": "1.0.2",
 		"postcss-flexbugs-fixes": "5.0.2",
-		"postcss-preset-env": "7.0.1",
-		"postcss-scss": "4.0.2",
-		"prettier": "2.3.2",
-		"react-refresh": "0.11.0",
-		"sass": "1.44.0",
-		"sass-loader": "12.3.0",
-		"semantic-release": "18.0.1",
+		"postcss-preset-env": "7.7.2",
+		"postcss-scss": "4.0.4",
+		"prettier": "2.7.1",
+		"react-refresh": "0.14.0",
+		"require-from-string": "2.0.2",
+		"sass": "1.53.0",
+		"sass-loader": "13.0.2",
+		"semantic-release": "19.0.3",
 		"start-server-and-test": "1.14.0",
-		"storybook-addon-next-router": "3.1.0",
-		"storybook-dark-mode": "1.0.8",
-		"stylelint": "14.1.0",
-		"stylelint-config-css-modules": "2.3.0",
+		"storybook-addon-next-router": "4.0.0",
+		"storybook-dark-mode": "1.1.0",
+		"stylelint": "14.9.1",
+		"stylelint-config-css-modules": "4.1.0",
 		"stylelint-config-prettier": "9.0.3",
 		"stylelint-config-recess-order": "3.0.0",
-		"stylelint-config-standard": "24.0.0",
+		"stylelint-config-standard": "26.0.0",
 		"stylelint-prettier": "2.0.0",
-		"stylelint-scss": "4.0.0",
-		"typescript": "4.4.4",
-		"webpack": "5.64.4"
+		"stylelint-scss": "4.2.0",
+		"typescript": "4.7.4",
+		"webpack": "5.73.0"
 	},
 	"config": {
 		"commitizen": {
